Unilorin Logo, Unit adjustment, Graph X/Y labels, card color adjustment

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto|Google+Sans:300,400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <title>Solar Charge Controller</title>
+    <title>Unilorin Solar PV Plant Web-based Monitoring System</title>
   </head>
   <body>
     <noscript>
