Favicon, Responsive header, meta information inclusion

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="Author" content="Dare Adewole II">
+    <meta name="keywords" content="UNILORIN, unilorin, solar, solar plant, monitoring, system, IoT, solar charge">
+    <meta name="description" content="Solar PV Plant Web-based Monitoring System shows real-time electrical power consumption of a solar plant. It aids remote monitoring of facility">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Google+Sans:300,400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
